# clara-demo

./: .editorconfig  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  README.md  build.gradle  services.yaml  services.yml  settings.gradle
.ci/: CMakeLists.txt
.github/workflows/: build.yaml
.reuse/: dep5
config/quality/: checkstyle-suppress.xml  checkstyle.xml  findbugs-exclude.xml
data/src/main/cpp/: CMakeLists.txt  image_data_type.cpp  image_data_type.hpp
data/src/main/java/dev/smancill/clara/demo/data/: ImageDataType.java
data/src/main/java/org/jlab/clara/demo/data/: ImageDataType.java
data/src/test/cpp/: CMakeLists.txt  test_image_data_type.cpp
data/src/test/java/dev/smancill/clara/demo/data/: ImageDataTypeTest.java
data/src/test/java/org/jlab/clara/demo/data/: ImageDataTypeTest.java
legacy/src/main/cpp/: CMakeLists.txt  image.hpp  pupil_detector.cpp  pupil_detector.hpp
legacy/src/main/java/dev/smancill/clara/demo/: OpenCVDemo.java
legacy/src/main/java/dev/smancill/clara/demo/core/: FaceDetector.java  Image.java  ImageReader.java  ImageWriter.java  ZipUtils.java
legacy/src/main/java/org/jlab/clara/demo/: OpenCVDemo.java
legacy/src/main/java/org/jlab/clara/demo/core/: FaceDetector.java  Image.java  ImageReader.java  ImageWriter.java  ZipUtils.java
scripts/: install-clara  install-demo  install-opencv  run-demo
services/src/main/cpp/: CMakeLists.txt  pupil_detector_service.cpp  pupil_detector_service.hpp
services/src/main/java/dev/smancill/clara/demo/services/: FaceDetectorService.java  ImageReaderService.java  ImageWriterService.java
services/src/main/java/org/jlab/clara/demo/services/: FaceDetectorService.java  ImageReaderService.java  ImageWriterService.java
services/src/main/resources/: FaceDetectorService.yaml  ImageReaderService.yaml  ImageWriterService.yaml
